<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">mohamed_nethir_s_application6</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_week">Week</string>
  <string name="lbl_cap_size">Cap Size</string>
  <string name="lbl_40_td">40 TD</string>
  <string name="msg_confirm_passwor">        Confirm password</string>
  <string name="lbl_doliprane">Doliprane</string>
  <string name="lbl_glucose_by_date">Glucose by date </string>
  <string name="msg_all_spacialitie">All Spacialities</string>
  <string name="lbl_dermathology">Dermathology</string>
  <string name="lbl_date_of_birth">     date of birth</string>
  <string name="lbl_glucometer">Glucometer</string>
  <string name="lbl_phone_number">       phone number</string>
  <string name="lbl_password2">  Password</string>
  <string name="lbl_5_sun">5
Sun </string>
  <string name="msg_mobile_number">Mobile number 
54550005</string>
  <string name="lbl_my_appointments">My appointments </string>
  <string name="lbl_male">Male</string>
  <string name="lbl_online_doctors">Online doctors</string>
  <string name="msg_book_an_appoint">Book an Appointment</string>
  <string name="lbl_diabetes">Diabetes</string>
  <string name="msg_prescription_or">Prescription or report </string>
  <string name="lbl_search_doctor">Search doctor</string>
  <string name="lbl_month">Month</string>
  <string name="lbl_by_time">By time </string>
  <string name="lbl_relationship">       Relationship </string>
  <string name="msg_your_informatio">Your information is safe with us </string>
  <string name="lbl_schedule">Schedule</string>
  <string name="lbl_150mg">150mg</string>
  <string name="lbl_gender">Gender</string>
  <string name="lbl_history">History</string>
  <string name="lbl_email_adress2">Email adress 
</string>
  <string name="lbl_high">High</string>
  <string name="msg_iby_continuing">IBy continuing your confirm you agree with our terms and conditions !</string>
  <string name="lbl_amount">Amount</string>
  <string name="lbl_sousse">Sousse</string>
  <string name="lbl_female_doctor">             Female doctor</string>
  <string name="lbl_orthopedician">orthopedician</string>
  <string name="lbl_welcome">Welcome !</string>
  <string name="msg_experience">Experience     16yrs+</string>
  <string name="msg_i_am_feeling_be">I\u2019am feeling better ...</string>
  <string name="lbl_password">       Password</string>
  <string name="msg_join_as_doctor">Join as Doctor , Patient , Laboratory or Pharmacy </string>
  <string name="lbl_3_31_taken">3/31 taken</string>
  <string name="lbl_oncologist">Oncologist</string>
  <string name="msg_dr_narjess_cha">Dr. Narjess Chaari Kamoun</string>
  <string name="lbl_this_month">This Month                    </string>
  <string name="lbl_diabetic">Diabetic</string>
  <string name="lbl_khadija_bensaad">Khadija bensaad </string>
  <string name="lbl_phone_number2">        phone number </string>
  <string name="lbl_22">22</string>
  <string name="lbl_medicines">Medicines</string>
  <string name="lbl_80td">80TD</string>
  <string name="lbl_physician">Physician </string>
  <string name="lbl_phone_number3">phone number </string>
  <string name="lbl_8_wed">8 
Wed</string>
  <string name="lbl_female">Female</string>
  <string name="lbl_cardiology">Cardiology</string>
  <string name="msg_60_complete_yo">60% complete your profile</string>
  <string name="msg_schedule_8">Schedule     8:00-18:00</string>
  <string name="lbl_70_td">70 TD</string>
  <string name="lbl_radiologist">Radiologist</string>
  <string name="lbl_recent_chat">Recent Chat</string>
  <string name="lbl_doctors">Doctors</string>
  <string name="lbl_c_tamol">Cétamol</string>
  <string name="lbl_nombre_d_enfant">       Nombre d\u2019enfant</string>
  <string name="lbl_get_started">Get started</string>
  <string name="lbl_heart_beat">Heart beat</string>
  <string name="lbl_sign_up">Sign Up </string>
  <string name="lbl_14">14</string>
  <string name="lbl_add_reminder">Add Reminder</string>
  <string name="msg_add_emergency_c">Add emergency contacts </string>
  <string name="msg_full_name_khad">Full name 
Khadija bensaad </string>
  <string name="lbl_plastic_surgeon">Plastic Surgeon</string>
  <string name="msg_cosmetic_surgeo">Cosmetic Surgeon</string>
  <string name="msg_sign_up_with_us">Sign up with us !</string>
  <string name="msg_dr_sinda_hadda">Dr. Sinda Haddad</string>
  <string name="msg_hannibal_intern">HANNIBAL INTERNATIONAL CLINIC, TUNIS</string>
  <string name="lbl_pediatric">Pediatric</string>
  <string name="lbl_frequency">Frequency</string>
  <string name="lbl_remove">Remove</string>
  <string name="lbl_4_sat">4
Sat</string>
  <string name="lbl_6_mon">6
Mon</string>
  <string name="msg_hello_khadija">Hello 
Khadija bensaad!</string>
  <string name="msg_otolaryngologis">otolaryngologist</string>
  <string name="lbl_5_6">5.6 </string>
  <string name="lbl_54550005">54550005</string>
  <string name="lbl_messages">Messages</string>
  <string name="msg_150_mg_1_capsu">150 mg, 1 capsule</string>
  <string name="msg_enter_your_emai">enter your email</string>
  <string name="lbl_moncef_guiga">Moncef Guiga</string>
  <string name="lbl_welcome_to">welcome to </string>
  <string name="lbl_average">Average</string>
  <string name="msg_link_to_your_d">link to  your doctor, save time by scheduling appointments, receive examinations, and enhance the quality of your care through Medilink.</string>
  <string name="msg_ennasr_clinic">ENNASR CLINIC, ARIANA</string>
  <string name="lbl_5_6_6">5.6&lt;6</string>
  <string name="lbl_helps_you"> 
helps you </string>
  <string name="lbl_by_date">By date </string>
  <string name="lbl_1_month">1 Month</string>
  <string name="lbl_mmol_l">mmol/L</string>
  <string name="lbl_dr_helmi">Dr.Helmi</string>
  <string name="lbl_analyses">Analyses</string>
  <string name="lbl_next">Next</string>
  <string name="lbl_full_name2">Full name 
</string>
  <string name="lbl_15_38_pm">15:38 PM</string>
  <string name="lbl_dentist">Dentist</string>
  <string name="lbl_medilink2">Medilink</string>
  <string name="msg_doctor_sign_up">Doctor Sign up with us !</string>
  <string name="lbl_60_td">60 TD</string>
  <string name="lbl_after_meal">after  meal</string>
  <string name="lbl_before_meal">Before meal</string>
  <string name="lbl_sign_in">Sign in </string>
  <string name="msg_search_speciali">Search Speciality</string>
  <string name="msg_clinic_alyssa">CLINIC ALYSSA, TUNIS</string>
  <string name="lbl_8_00_18_00">8:00-18:00</string>
  <string name="lbl_may">May</string>
  <string name="lbl_price">Price</string>
  <string name="msg_never_miss_any">Never miss any ...</string>
  <string name="lbl_khadija_bensaad2">Khadija bensaad</string>
  <string name="msg_your_medecines">Your Medecines Reminder</string>
  <string name="lbl_medilink">Medilink </string>
  <string name="lbl_prescriptions">Prescriptions</string>
  <string name="lbl_edit_schedule">Edit Schedule</string>
  <string name="lbl_allergies">Allergies</string>
  <string name="lbl_neurologist">Neurologist</string>
  <string name="msg_personal_inform">         Personal informations :</string>
  <string name="lbl_medecine_name">Medecine Name</string>
  <string name="lbl_doctor">Doctor</string>
  <string name="lbl_65_td">65 TD</string>
  <string name="lbl_genecologist">Genecologist</string>
  <string name="lbl_laboratory">Laboratory</string>
  <string name="lbl_cause">Cause</string>
  <string name="lbl_pre_diabetic">Pre _diabetic </string>
  <string name="msg_do_you_have_so">Do you  have some redness in your hand ???</string>
  <string name="lbl_by_time_of_date">by time of date </string>
  <string name="msg_glucose_by_time">Glucose by time of date </string>
  <string name="lbl_7_00pm">7:00PM</string>
  <string name="lbl_time">time</string>
  <string name="lbl_by_date2">by date </string>
  <string name="lbl_7_00_am">7:00 AM</string>
  <string name="msg_yes_i_do_and_it">Yes I do and it\u2019s tickling ! I\u2019ll send you a pic .</string>
  <string name="lbl_16yrs">16yrs+</string>
  <string name="lbl_experience2">            Experience</string>
  <string name="lbl_speciality">             Speciality</string>
  <string name="msg_add_medical_fil">Add Medical Files</string>
  <string name="lbl_civil_estate">       civil estate</string>
  <string name="lbl_blood_pressure">Blood pressure</string>
  <string name="msg_email_adress_k">Email adress 
Khadijabensaad4@gmaill.com </string>
  <string name="lbl_male_doctor">             male doctor </string>
  <string name="lbl_type_here">Type here...</string>
  <string name="msg_add_another_eme">Add another emergency contact</string>
  <string name="lbl_2_pill_day">2 pill/Day</string>
  <string name="lbl_nombre_d_enfant2">Nombre d\u2019enfant</string>
  <string name="lbl_50_td">50 TD</string>
  <string name="msg_select_your_rol">Select Your Role</string>
  <string name="lbl_today">Today</string>
  <string name="lbl_search_history">Search history </string>
  <string name="lbl_follow">Follow</string>
  <string name="lbl_email_adress">       email adress</string>
  <string name="lbl_see_all">See all</string>
  <string name="lbl_10_30">10::30</string>
  <string name="lbl_daily">Daily</string>
  <string name="lbl_name">       Name </string>
  <string name="lbl_11_00">11:00</string>
  <string name="lbl_surgeries">Surgeries</string>
  <string name="lbl_blood_glucose">Blood Glucose </string>
  <string name="msg_you_should_get">You should get an xray and analyses to see it\u2019 cause </string>
  <string name="lbl_profile">Profile</string>
  <string name="lbl_tracking">Tracking</string>
  <string name="lbl_online">Online </string>
  <string name="lbl_time_schedule">Time &amp; Schedule</string>
  <string name="lbl_7_tus">7
Tus</string>
  <string name="msg_sign_in_with_yo">Sign in with your email and password or continue with social media</string>
  <string name="lbl_metrics">Metrics</string>
  <string name="lbl_1">1</string>
  <string name="lbl_2">2</string>
  <string name="lbl_5">5</string>
  <string name="msg_looking_for_doc">Looking for doctors , clinics,  medeicines
Medilink 
helps you </string>
  <string name="lbl_6">6&gt;</string>
  <string name="lbl_remeber_me">Remeber me </string>
  <string name="msg_khadijabensaad4">Khadijabensaad4@gmaill.com </string>
  <string name="lbl_radiographies">Radiographies</string>
  <string name="msg_looking_for_doc2">Looking for doctors , clinics,  medeicines
</string>
  <string name="lbl_after_breakfast">After Breakfast</string>
  <string name="lbl_examinations">Examinations:</string>
  <string name="lbl_aphtalmologist">aphtalmologist</string>
  <string name="msg_follow_these">Follow these ...</string>
  <string name="msg_dr_zeineb_khar">Dr. Zeineb Kharouf</string>
  <string name="lbl_implantologist">Implantologist</string>
  <string name="lbl_after_dinner">After Dinner</string>
  <string name="lbl_diseases">Diseases</string>
  <string name="lbl_duration">Duration</string>
  <string name="lbl_amoxicillin">Amoxicillin</string>
  <string name="lbl_spacialities">Spacialities</string>
  <string name="lbl_forgot_password">Forgot password</string>
  <string name="lbl_mobile_number">Mobile number 
</string>
  <string name="lbl_radiotherapist">Radiotherapist</string>
  <string name="lbl_10_50">10::50</string>
  <string name="lbl_address">       address</string>
  <string name="lbl_55_td">55 TD</string>
  <string name="lbl_pharmacy">Pharmacy</string>
  <string name="lbl_glucose">Glucose</string>
  <string name="msg_chirurgie_pro">CHIRURGIE PRO, LA MARSA</string>
  <string name="lbl_remember_me">Remember me </string>
  <string name="lbl_experience">Experience     </string>
  <string name="lbl_full_name">       Full name </string>
</resources>
