<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="listdrugs17720971RowModel" type="com.mohamednethirsapplication.app.modules.medilinikeighteen.data.model.Listdrugs17720971RowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRow"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <LinearLayout android:id="@+id/linearRowdrugs17720971"
            android:layout_height="wrap_content"
            android:layout_weight="0.5" android:layout_width="0dp"
            android:orientation="horizontal" style="@style/groupStylewhite_14">
            <ImageView android:id="@+id/imageDrugs17720971"
                android:layout_height="@dimen/_38pxh"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginStart="@dimen/_8pxh"
                android:layout_marginTop="@dimen/_11pxv"
                android:layout_width="@dimen/_50pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_drugs17720971"
                tools:ignore="ContentDescription" tools:src="@drawable/img_drugs17720971"/>
            <FrameLayout android:id="@+id/frameStackamount"
                android:layout_height="@dimen/_53pxv"
                android:layout_marginBottom="@dimen/_6pxv"
                android:layout_marginEnd="@dimen/_7pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_5pxv" android:layout_width="@dimen/_93pxh">
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtAmount"
                    android:layout_gravity="top|end"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_3pxh"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listdrugs17720971RowModel.txtAmount}"
                    style="@style/txtPoppinsbold18" tools:text="@string/lbl_amount"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtPilldayCounter"
                    android:layout_gravity="bottom|start"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listdrugs17720971RowModel.txtPilldayCounter}"
                    style="@style/txtPoppinsbold19" tools:text="@string/lbl_2_pill_day"/>
            </FrameLayout>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowlanguage"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_23pxh"
            android:layout_weight="0.5" android:layout_width="0dp"
            android:orientation="horizontal" style="@style/groupStylewhite_14">
            <ImageView android:id="@+id/imageRadiowaves492"
                android:layout_height="@dimen/_36pxh"
                android:layout_marginBottom="@dimen/_15pxv"
                android:layout_marginStart="@dimen/_2pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="@dimen/_40pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_radiowaves492"
                tools:ignore="ContentDescription" tools:src="@drawable/img_radiowaves492"/>
            <FrameLayout android:id="@+id/frameStacklanguage"
                android:layout_height="@dimen/_51pxv"
                android:layout_marginBottom="@dimen/_4pxv"
                android:layout_marginEnd="@dimen/_9pxh"
                android:layout_marginStart="@dimen/_7pxh"
                android:layout_marginTop="@dimen/_8pxv" android:layout_width="@dimen/_104pxh">
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txtLanguage"
                    android:layout_gravity="top|center"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_10pxv"
                    android:layout_marginEnd="@dimen/_2pxh"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listdrugs17720971RowModel.txtLanguage}"
                    style="@style/txtPoppinsbold18" tools:text="@string/lbl_this_month"/>
                <TextView android:ellipsize="end"
                    android:gravity="top|start"
                    android:id="@+id/txt331taken"
                    android:layout_gravity="bottom|end"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:text="@{listdrugs17720971RowModel.txt331taken}"
                    style="@style/txtPoppinsbold19" tools:text="@string/lbl_3_31_taken"/>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
